Add Materialize as a style library

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,9 @@
 {{> head }}
 <body>
-    {{{body}}}
+    <div class="container">
+        {{{body}}}
 
-    {{> footer }}
+        {{> footer }}
+    </div>
 </body>
 </html>
