--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,15 +9,21 @@
         {{/if}}
 
         {{#if isCourses}}
-            <li class="active"><a href="/">Курсы</a></li>
+            <li class="active"><a href="/courses">Курсы</a></li>
         {{else}}
             <li><a href="/courses">Курсы</a></li>
         {{/if}}
 
         {{#if isAdd}}
-            <li class="active"><a href="/">Добавить курс</a></li>
+            <li class="active"><a href="/add">Добавить курс</a></li>
         {{else}}
             <li><a href="/add">Добавить курс</a></li>
+        {{/if}}
+
+        {{#if isCard}}
+            <li class="active"><a href="/card">Корзина</a></li>
+        {{else}}
+            <li><a href="/card">Корзина</a></li>
         {{/if}}
       </ul>
     </div>
