--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,5 +1,5 @@
 <h1>Редактировать курс {{course.title}}</h1>
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" method="POST" class="course-form">
     <div class="input-field">
         <input id="title" type="text" name="title" class="validate" value="{{course.title}}" required>
         <label for="title">Название курса</label>
@@ -20,5 +20,10 @@
 
     <input type="hidden" name="id" value="{{course.id}}" />
 
-    <button class="btn btn-primary">Редактировать курс</button>
+    <button type="submit" class="btn btn-primary">Редактировать курс</button>
+</form>
+
+<form action="/courses/remove" method="POST">
+    <input type="hidden" name="id" value="{{course.id}}" />
+    <button class="btn red">Удалить курс</button>
 </form>
