--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col s6 offset-s3">
                 <div class="card">
-                    <span class="card-content">
+                    <div class="card-content">
                         <span class="card-title">
                             Заказ <small>{{_id}}</small>
                         </span>
