--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -26,10 +26,16 @@
             <li><a href="/card">Корзина</a></li>
         {{/if}}
 
-         {{#if isOrder}}
+        {{#if isOrder}}
             <li class="active"><a href="/orders">Сделать заказ</a></li>
         {{else}}
             <li><a href="/orders">Сделать заказ</a></li>
+        {{/if}}
+
+        {{#if isLogin}}
+            <li class="active"><a href="/auth/login#login">Войти</a></li>
+        {{else}}
+            <li><a href="/auth/login#login">Войти</a></li>
         {{/if}}
       </ul>
     </div>
