Add a registration of user with saving personal data to DB

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -31,6 +31,12 @@
                 <label for="remail">Email</label>
                 <span class="helper-text" data-error="Введите email"></span>
             </div>
+
+            <div class="input-field">
+                <input id="name" type="text" name="name" class="validate" required>
+                <label for="remail">Ваше имя</label>
+                <span class="helper-text" data-error="Введите имя"></span>
+            </div>
             
             <div class="input-field">
                 <input id="rpassword" type="password" name="password" class="validate" required>
