--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,6 +7,10 @@
         </ul>
       </div>
       <div id="login" class="col s6 offset-s3">
+        {{#if loginError}}
+          <p class="alert">{{loginError}}</p>
+        {{/if}}
+
         <h2>Войти в магазин</h2>
         <form action="/auth/login" method="POST">
             <div class="input-field">
@@ -24,6 +28,10 @@
         </form>
       </div>
       <div id="register" class="col s6 offset-s3">
+        {{#if registerError}}
+          <p class="alert">{{registerError}}</p>
+        {{/if}}
+
         <h2>Создать акакунт</h2>
         <form action="/auth/register" method="POST">
             <div class="input-field">
