--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -35,7 +35,7 @@
         {{/if}}
 
         <h2>Создать акакунт</h2>
-        <form action="/auth/register" method="POST">
+        <form action="/auth/register" method="POST" novalidate>
             <div class="input-field">
                 <input id="remail" type="email" name="email" class="validate" required>
                 <label for="remail">Email</label>
