--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,19 +1,24 @@
 <h1>Добавить новый курс</h1>
-<form action="/add" method="POST">
+
+{{#if error}}
+    <p class="alert">{{error}}</p>
+{{/if}}
+
+<form action="/add" method="POST" novalidate>
     <div class="input-field">
-        <input id="title" type="text" name="title" class="validate" required>
+        <input id="title" type="text" name="title" class="validate" value="{{data.title}}" required>
         <label for="title">Название курса</label>
         <span class="helper-text" data-error="Введите название"></span>
     </div>
 
     <div class="input-field">
-        <input id="price" type="number" name="price" class="validate" required min="1">
+        <input id="price" type="number" name="price" class="validate" value="{{data.price}}" required min="1">
         <label for="price">Цена</label>
         <span class="helper-text" data-error="Введите цену"></span>
     </div>
     
     <div class="input-field">
-        <input id="img" type="text" name="image" class="validate" required>
+        <input id="img" type="text" name="image" class="validate" value="{{data.image}}" required>
         <label for="img">URL картинки</label>
         <span class="helper-text" data-error="Введите url картинки"></span>
     </div>
