--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,5 +1,5 @@
 <h1>Редактировать курс {{course.title}}</h1>
-<form action="/courses/edit" method="POST" class="course-form">
+<form action="/courses/edit" method="POST" class="course-form" novalidate>
     <div class="input-field">
         <input id="title" type="text" name="title" class="validate" value="{{course.title}}" required>
         <label for="title">Название курса</label>
